--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ webkit6 = "0.4"
 chrono = "0.4"
 hyprland = "0.4.0-beta.1"
 battery = "0.7.8"
+machine-info = "1.0.9"
+nix = { version = "0.29", features = ["fs"] }
