Update: Minor bug fixes

--- a/static/config.json
+++ b/static/config.json
@@ -13,7 +13,8 @@
     "format": "{}"
   },
   "clock": {
-    "position": "right"
+    "position": "right",
+    "format": "{HH:mm}"
   },
   "activeWindow": {
     "position": "center"
